# duckcode-observability

./: .env.example  ADD_COST_DATA_TEST.md  ADMIN_SETTINGS_CLEANUP.md  AI_DOCS_COMPLETE_SUMMARY.md  AI_DOCUMENTATION_ENTERPRISE_REDESIGN.md  AI_DOCUMENTATION_SYSTEM_COMPLETE.md  ALERT_CONFIGURATION_UPDATE.md  API_KEY_DEFAULT_SYSTEM.md  AUTHENTICATION_FLOW_FIX.md  AUTOMATIC_WEBHOOK_COMPLETE.md  AUTO_DOCUMENTATION_UPDATE_DESIGN.md  AUTO_SYSTEM_COMPLETE.md  BACKEND_SQL_QUERIES_TO_VERIFY.sql  BUDGET_AND_SECURITY_FEATURES.md  BUDGET_SPEND_IMPLEMENTATION_COMPLETE.md  CACHING_IMPLEMENTATION.md  CAPTURE_EXTRACTION_LOGS.md  CLEAN_RESET_AND_REGISTER.md  CODEBASE_PAGE_UPDATED.md  CODEBASE_PAGE_WORKING.md  CODE_LINEAGE_ISSUE_ANALYSIS.md  CODE_LINEAGE_KILLER_FEATURES_ANALYSIS.md  COLUMN_LEVEL_SEARCH_IMPLEMENTATION.md  COLUMN_LINEAGE_95_ACCURACY.md  COLUMN_LINEAGE_ACTUAL_PLAN.md  COLUMN_LINEAGE_COMPLETE.md  COLUMN_LINEAGE_IMPLEMENTATION_PLAN.md  COLUMN_LINEAGE_IMPLEMENTED.md  COLUMN_SEARCH_FIX.md  COMPLETE_BACKEND_IMPLEMENTATION.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SOLUTION.md  COMPLETE_SYSTEM_READY.md  CONNECTION_ID_MISMATCH_ISSUE.md  CONNECTOR_UI_PRODUCTION_READY.md  CONNECTOR_UI_USAGE.md  CTE_FIX_APPLIED.md  DASHBOARD_CODE_BROWSER_RESTORED.md  DASHBOARD_FIX_SUMMARY.md  DATABASE_SIZE_COMPLETE_REPORT.md  (+202 more)
Deployment_docs/: AGENT_AUTO_SWITCH_IMPLEMENTATION.md  ANALYTICS_ENHANCEMENT_SUMMARY.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANALYTICS_TROUBLESHOOTING.md  COMMIT_MESSAGE.md  COMPLETE_DEPLOYMENT_SUMMARY.md  DEBUG_ANALYTICS_FLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_DOCUMENTATION_INDEX.md  DEPLOYMENT_SUCCESS.md  DOCKER_COMPOSE_ENTERPRISE.yml  ENTERPRISE_API_SECURITY_AUDIT.md  ENTERPRISE_AUTH_IMPLEMENTATION.md  ENTERPRISE_AUTH_PLAN.md  (+22 more)
tantivy-search/: .env.example  .gitignore  Cargo.toml  README.md
tantivy-search-v2/: .env.example  .gitignore  Cargo.toml  MIGRATION_FROM_IDE.md  QUICKSTART.md  README.md  start-tantivy.sh  test_route.sh
tantivy-search-v2/src/: api.rs  cache.rs  db.rs  file_api.rs  file_indexer.rs  file_schema.rs  indexer.rs  main.rs  schema.rs  searcher.rs  security.rs  storage.rs
tantivy-search/src/: api.rs  db.rs  indexer.rs  main.rs  schema.rs  searcher.rs
(+661 files in other folders)
