[package]
name = "tantivy-search"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tantivy - Full-text search engine
tantivy = "0.21"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.12"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
